--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -32,25 +32,26 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@types/react": "^16.8.6 || ^17.0.0",
-    "react": "^16.8.0 || ^17.0.0"
+    "@types/react": "^16.8.6 || ^17.0.0 || ^18.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^6.1.10",
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-backgrounds": "^6.1.10",
-    "@storybook/addon-docs": "^6.1.10",
-    "@storybook/addon-viewport": "^6.1.10",
-    "@storybook/react": "^6.1.10",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.0.0",
+    "@storybook/addon-a11y": "^6.5.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-backgrounds": "^6.5.9",
+    "@storybook/addon-docs": "^6.5.9",
+    "@storybook/addon-viewport": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^27.0.0",
+    "@types/react": "^18.0.14",
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
     "jest": "^27.0.0",
-    "react": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-jest": "^27.0.0"
   }
 }
