--- a/package.json
+++ b/package.json
@@ -35,7 +35,18 @@
     "typescript": "^4.0.0",
     "yaml-lint": "^1.2.4"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/react/**",
+      "**/@testing-library/**",
+      "**/@storybook/**",
+      "**/@types/**",
+      "**/webpack/**",
+      "**/babel-*/**",
+      "**/@babel/**"
+    ]
+  }
 }
