--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -49,12 +49,11 @@
     "@testing-library/user-event": "^14.2.1",
     "@types/jest": "^27.0.0",
     "@types/react": "^18.0.14",
-    "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
     "jest": "^27.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^27.0.0",
-    "webpack": "5"
+    "webpack": "^5.73.0"
   }
 }
