--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -61,6 +61,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.0.0",
     "@types/jest": "^27.0.0",
+    "@types/react": "^17.0.1",
     "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "bundlesize": "^0.18.0",
