--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -35,6 +35,11 @@
     "@types/react": "^16.8.6 || ^17.0.0 || ^18.0.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
+  "peerDependenciesMeta": {
+    "@types/react": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
