--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-hooks",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
