chore(spindle-ui): check ESM file size

--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -1,15 +1,15 @@
 {
   "files": [
     {
-      "path": "./dist/Icon/@(OnedariFill|Peta|Amebapick).js",
+      "path": "./dist/Icon/@(OnedariFill|Peta|Amebapick).mjs",
       "maxSize": "2.12 kB"
     },
     {
-      "path": "./dist/Icon/!(index|OnedariFill|Peta|Amebapick).js",
+      "path": "./dist/Icon/!(index|OnedariFill|Peta|Amebapick).mjs",
       "maxSize": "1.5 kB"
     },
     {
-      "path": "./dist/!(Icon)/*.js",
+      "path": "./dist/!(Icon)/*.mjs",
       "maxSize": "1.5 kB"
     },
     {
