--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@commitlint/config-lerna-scopes": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^7.5.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "eslint": "7.5.0",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.20.3",
     "husky": "^7.0.2",
     "is-ci": "^3.0.0",
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
+    "prettier": "2.0.5",
     "textlint": "^12.0.0",
     "textlint-rule-preset-ameba": "openameba/textlint-rule-preset-ameba",
-    "typescript": "^4.0.0",
+    "typescript": "4.0.5",
     "yaml-lint": "^1.2.4"
   },
   "workspaces": {
