--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -33,11 +33,12 @@
     "@figma-export/cli": "^4.0.0",
     "@figma-export/types": "^4.0.0",
     "@types/lodash.setwith": "^4.3.6",
+    "@types/jest": "^27.0.0",
     "jest": "^27.2.4",
     "jsonabc": "^2.3.1",
     "lodash.setwith": "^4.3.2",
     "make-dir": "^3.1.0",
     "style-dictionary": "^3.0.1",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "27.0.5"
   }
 }
