--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -85,6 +85,6 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-selector-bem-pattern": "^2.1.0",
-    "ts-jest": "^27.0.0"
+    "ts-jest": "27.0.0"
   }
 }
