--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -1,12 +1,7 @@
-name: build icon via webhook
+name: build icon
 
 on:
-  workflow_dispatch:
-    inputs:
-      modified_components:
-        description: 'JSON array for modified components'
-        required: true
-        default: '["ALL"]'
+  - push
 
 jobs:
   build_icons:
@@ -30,9 +25,8 @@ jobs:
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
           FILE_KEY: ${{ secrets.FIGMA_ICON_FILE_KEY }}
           NODE_ID: ${{ secrets.FIGMA_ICON_NODE_ID }}
-          ICON_NAMES: ${{ github.event.inputs.modified_components }}
         run: |
-          node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '$ICON_NAMES' })" > packages/spindle-icons/figma.json
+          node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '["755"]' })" > packages/spindle-icons/figma.json
           npx lerna run --scope @openameba/spindle-icons build
           npx lerna run --scope @openameba/spindle-ui icon
           yarn format
