chore(spindle-ui): update budget of bundlesize for Modal CSS

--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -17,8 +17,12 @@
       "maxSize": "1.5 kB"
     },
     {
-      "path": "./dist/**/!(index).css",
+      "path": "./dist/!(Modal)/!(index).css",
       "maxSize": "1.5 kB"
+    },
+    {
+      "path": "./dist/Modal/!(index).css",
+      "maxSize": "2.0 kB"
     },
     {
       "path": "./dist/index.css",
