--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -51,6 +51,12 @@
     }
   },
   "dependencies": {
+    "@storybook/addon-a11y": "^6.5.9",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-backgrounds": "^6.5.9",
+    "@storybook/addon-docs": "^6.5.9",
+    "@storybook/addon-viewport": "^6.5.9",
+    "@storybook/react": "^6.5.9",
     "ameba-color-palette.css": "^4.8.0",
     "react-merge-refs": "^1.1.0"
   },
