--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -51,22 +51,18 @@
     }
   },
   "dependencies": {
+    "ameba-color-palette.css": "^4.8.0",
+    "react-merge-refs": "^1.1.0"
+  },
+  "devDependencies": {
+    "@mdx-js/react": "^2.1.2",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-backgrounds": "^6.5.9",
     "@storybook/addon-docs": "^6.5.9",
     "@storybook/addon-viewport": "^6.5.9",
+    "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/react": "^6.5.9",
-    "ameba-color-palette.css": "^4.8.0",
-    "react-merge-refs": "^1.1.0"
-  },
-  "devDependencies": {
-    "@storybook/addon-a11y": "^6.1.10",
-    "@storybook/addon-actions": "^6.1.10",
-    "@storybook/addon-backgrounds": "^6.1.10",
-    "@storybook/addon-docs": "^6.1.10",
-    "@storybook/addon-viewport": "^6.1.10",
-    "@storybook/react": "^6.1.10",
     "@svgr/cli": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.0.0",
