--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -56,6 +56,7 @@
     "@types/react": "^18.0.14",
     "bundlesize": "^0.18.0",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^28.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "28.0.7",
