--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -78,6 +78,7 @@
     "dialog-polyfill": "^0.5.6",
     "firebase-tools": "^11.0.0",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^28.1.3",
     "postcss-cli": "^8.0.0",
     "postcss-import": "^12.0.1",
     "react": "^17.0.1",
