--- a/packages/spindle-theme-switch/package.json
+++ b/packages/spindle-theme-switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-theme-switch",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha.0",
   "description": "Spindle theme switch",
   "license": "MIT",
   "main": "dist/spindle-theme-switch.js",
