--- a/packages/spindle-theme-switch/tsconfig.json
+++ b/packages/spindle-theme-switch/tsconfig.json
@@ -3,13 +3,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "outDir": "dist",
-    "moduleResolution": "node",
-    "baseUrl": "./",
-    "paths": {
-      "https://unpkg.com/dark-mode-toggle": [
-        "../../node_modules/dark-mode-toggle/src/dark-mode-toggle.d.ts"
-      ],
-    }
+    "moduleResolution": "node"
   },
   "include": [
     "src"
