--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -68,6 +68,7 @@
     "@svgr/cli": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^27.0.0",
     "@types/react": "^17.0.1",
