feat(spindle-ui): add SnackBar

--- a/packages/spindle-ui/bundlesize.config.json
+++ b/packages/spindle-ui/bundlesize.config.json
@@ -9,7 +9,7 @@
       "maxSize": "1.1 kB"
     },
     {
-      "path": "./dist/!(Icon|Toast|Modal)/*.mjs",
+      "path": "./dist/!(Icon|Toast|Modal|SnackBar)/*.mjs",
       "maxSize": "1.1 kB"
     },
     {
@@ -17,19 +17,15 @@
       "maxSize": "1.5 kB"
     },
     {
-      "path": "./dist/!(Modal)/!(index).css",
-      "maxSize": "1.5 kB"
-    },
-    {
-      "path": "./dist/Modal/!(index).css",
-      "maxSize": "2.0 kB"
+      "path": "./dist/SnackBar/*.mjs",
+      "maxSize": "1.74 kB"
     },
     {
       "path": "./dist/Toast/*.mjs",
       "maxSize": "1.5 kB"
     },
     {
-      "path": "./dist/!(Modal)/!(index).css",
+      "path": "./dist/!(Modal|SnackBar)/!(index).css",
       "maxSize": "1.5 kB"
     },
     {
@@ -37,8 +33,12 @@
       "maxSize": "2.0 kB"
     },
     {
+      "path": "./dist/SnackBar/!(index).css",
+      "maxSize": "2.0 kB"
+    },
+    {
       "path": "./dist/index.css",
-      "maxSize": "7 kB"
+      "maxSize": "7.2 kB"
     }
   ]
 }
