--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^7.0.2",
     "is-ci": "^3.0.0",
     "lerna": "^5.0.0",
