--- a/packages/spindle-theme-switch/package.json
+++ b/packages/spindle-theme-switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-theme-switch",
-  "version": "0.1.1-alpha.3",
+  "version": "0.2.0",
   "description": "Spindle theme switch",
   "license": "MIT",
   "type": "module",
