--- a/packages/spindle-theme-switch/package.json
+++ b/packages/spindle-theme-switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-theme-switch",
-  "version": "0.2.2-alpha.0",
+  "version": "0.2.2",
   "description": "Spindle theme switch",
   "license": "MIT",
   "type": "module",
