--- a/.github/workflows/deploy-ui-preview.yml
+++ b/.github/workflows/deploy-ui-preview.yml
@@ -2,8 +2,8 @@ name: deploy UI preview
 
 on:
   pull_request:
-    paths:
-      - 'packages/spindle-ui/**'
+    # paths:
+    #   - 'packages/spindle-ui/**'
 
 jobs:
   build_and_preview:
