--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-ui",
-  "version": "0.48.0",
+  "version": "0.48.1-alpha.0",
   "main": "./index.js",
   "module": "./index.mjs",
   "types": "./index.d.ts",
