--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "test": "run-p lint format test:packages",
     "test:packages": "lerna run test",
     "lint": "run-p lint:*",
-    "lint:script": "eslint --cache .",
+    "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
-    "format": "prettier --check '**/*.{js,ts,tsx}'",
+    "format": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
     "fix:packages": "lerna run format",
