--- a/.github/workflows/build-icon-from-figma.yml
+++ b/.github/workflows/build-icon-from-figma.yml
@@ -43,8 +43,8 @@ jobs:
           ICONS: ${{ github.event.inputs.selection }}
         run: |
           node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: $ICONS.map(({name}) => name) })" > packages/spindle-icons/figma.json
-          npx lerna run --scope @openameba/spindle-icons build
-          npx lerna run --scope @openameba/spindle-ui icon
+          yarn lerna run --scope @openameba/spindle-icons build
+          yarn lerna run --scope @openameba/spindle-ui icon
           yarn format
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
