--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -33,8 +33,8 @@ jobs:
           ICON_NAMES: ${{ github.event.inputs.modified_components }}
         run: |
           node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '$ICON_NAMES' })" > packages/spindle-icons/figma.json
-          npx lerna run --scope @openameba/spindle-icons build
-          npx lerna run --scope @openameba/spindle-ui icon
+          yarn lerna run --scope @openameba/spindle-icons build
+          yarn lerna run --scope @openameba/spindle-ui icon
           yarn fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
