--- a/.github/workflows/deploy-ui-catalog.yml
+++ b/.github/workflows/deploy-ui-catalog.yml
@@ -24,10 +24,11 @@ jobs:
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-v2
       - run: yarn install --frozen-lockfile
-      - run: npx lerna bootstrap -- --frozen-lockfile
+      - run: yarn lerna bootstrap -- --frozen-lockfile
       - name: Update UI catalog
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          npx lerna run --scope @openameba/spindle-ui storybook:build
-          npx lerna run --scope @openameba/spindle-ui storybook:deploy -- --token $FIREBASE_TOKEN
+          yarn lerna run --scope @openameba/spindle-hooks prepublishOnly
+          yarn lerna run --scope @openameba/spindle-ui storybook:build
+          yarn lerna run --scope @openameba/spindle-ui storybook:deploy -- --token $FIREBASE_TOKEN
