--- a/.github/workflows/deploy-ui-catalog.yml
+++ b/.github/workflows/deploy-ui-catalog.yml
@@ -29,6 +29,6 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          yarn lerna run --scope @openameba/spindle-hooks prepublishOnly
+          yarn lerna run --scope @openameba/spindle-hooks build
           yarn lerna run --scope @openameba/spindle-ui storybook:build
           yarn lerna run --scope @openameba/spindle-ui storybook:deploy -- --token $FIREBASE_TOKEN
