chore(release): publish
 - @openameba/spindle-hooks@0.10.3-alpha.0
 - @openameba/spindle-ui@0.50.1-alpha.0

--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-hooks",
-  "version": "0.10.2",
+  "version": "0.10.3-alpha.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
