ci: build spindle-hooks in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}-v2
       - run: yarn install --frozen-lockfile
       - run: npx lerna bootstrap -- --frozen-lockfile
+      - run: yarn lerna run --scope @openameba/spindle-hooks build
       - name: Set git user
         run: |
           git config --global user.email "<>"
