--- a/packages/spindle-tokens/package.json
+++ b/packages/spindle-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openameba/spindle-tokens",
-  "version": "0.6.2-alpha.0",
+  "version": "0.7.0",
   "description": "Spindle design tokens.",
   "homepage": "https://github.com/openameba/spindle#readme",
   "license": "MIT",
