--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@openameba/spindle-hooks": "^0.11.0",
-    "ameba-color-palette.css": "^4.8.0",
+    "ameba-color-palette.css": "openameba/ameba-color-palette.css#animation",
     "react-merge-refs": "^1.1.0"
   },
   "devDependencies": {
