--- a/.textlintrc
+++ b/.textlintrc
@@ -1,5 +1,12 @@
 {
   "rules": {
     "preset-ameba": true
+  },
+  "plugins": {
+    "@textlint/markdown": {
+      "extensions": [
+        ".mdx"
+      ]
+    }
   }
 }
