--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
+    "lint:text": "textlint .",
     "format": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
     "fix:packages": "lerna run format",
     "fix:format": "prettier --write '**/*.{js,ts,tsx}'",
+    "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
     "prepare": "is-ci || husky install"
