--- a/.github/workflows/deploy-highlightjs-styles-preview.yml
+++ b/.github/workflows/deploy-highlightjs-styles-preview.yml
@@ -13,7 +13,7 @@ jobs:
         working-directory: ./packages/spindle-highlightjs-themes/
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: yarn install --frozen-lockfile
