--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:script": "eslint --cache 'packages/**/src/**/*.{js,ts,tsx}'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
-    "lint:text": "textlint .",
+    "lint:text": "textlint --quiet .",
     "format": "prettier --check 'packages/**/src/**/*.{js,ts,tsx}'",
     "fix": "run-p fix:*",
     "fix:script": "eslint . --fix",
