--- a/.github/workflows/deploy-ui-catalog.yml
+++ b/.github/workflows/deploy-ui-catalog.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           yarn lerna run --scope @openameba/spindle-hooks build
           yarn lerna run --scope @openameba/spindle-ui storybook:build
-          yarn lerna run --scope @openameba/spindle-ui storybook:deploy -- --token $FIREBASE_TOKEN
+          npx lerna run --scope @openameba/spindle-ui storybook:deploy -- --token $FIREBASE_TOKEN
