--- a/.github/workflows/deploy-ui-preview.yml
+++ b/.github/workflows/deploy-ui-preview.yml
@@ -4,10 +4,21 @@ on:
   pull_request:
     paths:
       - 'packages/spindle-ui/**'
+  pull_request_target:
+    types:
+      - labeled
+    paths:
+      - 'packages/spindle-ui/**'
 
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
+    # need specified label if Pull-request from fork
+    if: >
+      github.event.pull_request.head.repo.full_name == github.repository || (
+        github.event.pull_request.head.repo.full_name != github.repository &&
+        contains(github.event.pull_request.labels.*.name, 'allow execute workflow')
+      )
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
