--- a/.github/workflows/visual-regression-test.yml
+++ b/.github/workflows/visual-regression-test.yml
@@ -1,22 +1,26 @@
 name: visual regression test
 
 on:
-  push:
-  pull_request_target:
-    types:
-      - labeled
-  workflow_dispatch:
+  - push
+  - pull_request_target
+  - workflow_dispatch
 
 jobs:
   check_paths:
     runs-on: ubuntu-latest
     # ignoring if triggered by bot
-    # need specified label if Pull-request
+    # need specified label if Pull-request from fork
     if: >
       (github.actor != 'dependabot[bot]' && github.actor != 'renovate[bot]') && (
         github.event_name == 'push' ||
         github.event_name == 'workflow_dispatch' || (
-          github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'allow execute workflow')
+          github.event_name == 'pull_request' && (
+            github.event.pull_request.head.repo.full_name == github.repository || (
+              github.event.pull_request.head.repo.full_name != github.repository &&
+              github.event.pull_request.action == 'labeled' &&
+              contains(github.event.pull_request.labels.*.name, 'allow execute workflow')
+            )
+          )
         )
       )
     outputs:
