--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@openameba/spindle-hooks": "^0.14.0",
+    "@openameba/spindle-tokens": "^0.10.0",
     "ameba-color-palette.css": "^4.9.0",
     "react-merge-refs": "^1.1.0"
   },
