--- a/.github/workflows/visual-regression-test.yml
+++ b/.github/workflows/visual-regression-test.yml
@@ -68,6 +68,7 @@ jobs:
       - run: npx lerna bootstrap -- --frozen-lockfile
       - run: |
           yarn lerna run --scope @openameba/spindle-hooks build
+          yarn lerna run --scope @openameba/spindle-tokens build
           yarn lerna run --scope @openameba/spindle-ui storybook:build
       - run: |
           npx lerna add --scope @openameba/spindle-ui --dev reg-keygen-git-hash-plugin
