--- a/packages/spindle-syntax-themes/.stylelintrc.json
+++ b/packages/spindle-syntax-themes/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
+    "color-function-notation": "legacy",
     "selector-class-pattern": null
   }
 }
