--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -82,6 +82,7 @@
     "firebase-tools": "^12.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
+    "postcss": "^8.4.27",
     "postcss-cli": "^10.0.0",
     "postcss-import": "^15.0.0",
     "react": "^17.0.1",
