--- a/.github/workflows/deploy-theme-switch.yml
+++ b/.github/workflows/deploy-theme-switch.yml
@@ -20,7 +20,10 @@ jobs:
           node-version: 16
       - run: yarn install --frozen-lockfile
       - run: yarn build
-      - name: Update example
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: yarn deploy -- --token $FIREBASE_TOKEN
+      - name: deploy to live channel
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
+          entryPoint: ./packages/spindle-theme-switch/
+          channelId: live
