--- a/.github/workflows/deploy-highlightjs-styles.yml
+++ b/.github/workflows/deploy-highlightjs-styles.yml
@@ -1,18 +1,18 @@
-name: deploy Highlight.js themes preview
+name: deploy Highlight.js themes
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'packages/spindle-highlightjs-themes/**'
+      - 'packages/spindle-syntax-themes/**'
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/spindle-highlightjs-themes/
+        working-directory: ./packages/spindle-syntax-themes/
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
