ci: replace lerna add

--- a/.github/workflows/visual-regression-test.yml
+++ b/.github/workflows/visual-regression-test.yml
@@ -70,10 +70,7 @@ jobs:
       - run: |
           yarn lerna run --scope @openameba/spindle-hooks build
           yarn lerna run --scope @openameba/spindle-ui storybook:build
-      - run: |
-          npx lerna add --scope @openameba/spindle-ui --dev reg-keygen-git-hash-plugin
-          npx lerna add --scope @openameba/spindle-ui --dev reg-notify-github-plugin
-          npx lerna add --scope @openameba/spindle-ui --dev reg-publish-gcs-plugin
+      - run: yarn workspace @openameba/spindle-ui add reg-keygen-git-hash-plugin reg-notify-github-plugin reg-publish-gcs-plugin --dev
       - name: capture stories
         run: >
           npx storycap
