ci(spindle-hooks,spindle-icons,spindle-syntax-themes,spindle-theme-switch): add repository url

--- a/packages/spindle-syntax-themes/package.json
+++ b/packages/spindle-syntax-themes/package.json
@@ -9,6 +9,10 @@
     "highlightjs-light.min.css",
     "highlightjs-dark.min.css"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/openameba/spindle.git"
+  },
   "publishConfig": {
     "access": "public"
   },
