--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -27,6 +27,10 @@
     "prepublishOnly": "yarn build"
   },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/openameba/spindle.git"
+  },
   "publishConfig": {
     "access": "public"
   },
