--- a/packages/spindle-theme-switch/package.json
+++ b/packages/spindle-theme-switch/package.json
@@ -10,6 +10,10 @@
     "dist",
     "src/types"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/openameba/spindle.git"
+  },
   "publishConfig": {
     "access": "public"
   },
