--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -39,6 +39,8 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           commit-message: 'feat(spindle-icons): update icons'
           branch: feat/build-icon-via-webhook
           delete-branch: true
