chore(spindle-tokens): update tsconfig target

--- a/packages/spindle-tokens/tsconfig.json
+++ b/packages/spindle-tokens/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "Node"
   },
   "include": [
-    "lib"
+    "lib",
+    "scripts",
   ],
   "exclude": [
     "./lib/**/*.test.*"
