chore: disable body-max-line-length rule

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "@commitlint/config-conventional",
     "@commitlint/config-lerna-scopes"
-  ]
+  ],
+  "rules": {
+    "body-max-line-length": [0, "always"]
+  }
 }
